--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -10,3 +10,23 @@ app.zc=zc
 app.cg=cg
 
 result.size=25
+
+email.type=QQ
+
+email.protocol=smtp
+
+email.host=smtp.qq.com
+
+email.port=465
+
+email.auth=true
+
+email.smtp.ssl.enable=true
+
+email.debug=false
+
+email.authorizationCode=uuewsuotkwerbjce
+
+from.email.url=64390357@qq.com
+
+receive.email.url=64390357@qq.com
