新增配置信息

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -30,3 +30,5 @@ email.authorizationCode=uuewsuotkwerbjce
 from.email.url=64390357@qq.com
 
 receive.email.url=64390357@qq.com
+
+public.ip=http://icanhazip.com/
